--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,15 @@
     transform: rotate(360deg);
   }
 }
+
+.row{
+  display: block;
+}
+.user-block{
+  width: 30%;
+  margin: 0 auto;
+  box-shadow:0px 0px 5px 3px #9f9f9f ;
+}
+select{
+  margin: 5px;
+}
